[project]
name = "dance-concert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "matplotlib>=3.11.0",
    "networkx>=3.6.1",
    "pandas>=3.0.3",
    "pyvis>=0.3.2",
]

[dependency-groups]
dev = [
    "pyqt6>=6.11.0",
    "pyside6>=6.11.1",
    "tk>=0.1.0",
]
